adiciona divs coloridos ao modelo de caixa

--- a/box.html
+++ b/box.html
@@ -1,13 +1,30 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Caixa</title>
+    <style>
+        div {
+            background-color: #282c34;
+            color: #f8f9fc;
+            display: block;
+            width: 244px;
+            height: 120px;
+
+        }
+    </style>
 </head>
+
 <body>
-        <h1>Modelo de Caixa</h1>
-    
+    <h1>Modelo de Caixa</h1>
+    <div>Paçoquinha</div>
+    <div>Rapadura</div>
+    <div>Churros</div>
+    <div>Bananada</div>
+
 </body>
+
 </html>
