--- a/box.html
+++ b/box.html
@@ -6,16 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Modelo de Caixa</title>
-    <style>
-        div {
-            background-color: #282c34;
-            color: #f8f9fc;
-            display: block;
-            width: 244px;
-            height: 120px;
-
-        }
-    </style>
+    <link href="box.css" rel="stylesheet" />
 </head>
 
 <body>
