--- a/box.html
+++ b/box.html
@@ -11,8 +11,8 @@
 
 <body>
     <h1>Modelo de Caixa</h1>
-    <div>Paçoquinha</div>
-    <div>Rapadura</div>
+    <div id="paçoquinha">Paçoquinha</div>
+    <div id="rapadura">Rapadura</div>
     <div>Churros</div>
     <div>Bananada</div>
 
