--- a/box.html
+++ b/box.html
@@ -13,7 +13,7 @@
     <h1>Modelo de Caixa</h1>
     <div id="paçoquinha">Paçoquinha</div>
     <div id="rapadura">Rapadura</div>
-    <div>Churros</div>
+    <div id="churros">Churros</div>
     <div>Bananada</div>
 
 </body>
